--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Detective Max Mystery - new escape game on mobile">
     <meta property="og:type" content="website">
     <meta property="og:image" content="img/icon.png">
-    <meta property="fb:app_id" content="ENTER_HERE_THIS_IS_BLANC">
+    <meta property="fb:app_id" content="com.detective.mystery.school.murder">
 
     <title>Detective Max Mystery</title>
 
@@ -779,10 +779,10 @@
                     <div class="content__title">Detective Max Mystery</div>
                     <div class="content__descr">Escape room + storytelling + adventure = BRAND NEW GAME GENRE</div>
                     <div class="content__buttons">
-                      <a href="ENTER_HERE_THIS_IS_BLANC" target="_blank" class="content__buttons__item" style="color:#ffffff;background-color:#5faabe;<!--background-image:url('img/googleplay.png');-->">
+                      <a href="https://play.google.com/store/apps/details?id=com.detective.mystery.school.murder" target="_blank" class="content__buttons__item" style="color:#ffffff;background-color:#5faabe;<!--background-image:url('img/googleplay.png');-->">
                         <table><tr><td>Download in Google.Play</td></tr></table>
                       </a>
-                      <a href="ENTER_HERE_THIS_IS_BLANC" target="_blank" class="content__buttons__item" style="color:#000000;background-color:#e0e0e0;<!--background-image:url('img/appstore.png');-->">
+                      <a href="https://apps.apple.com/us/app/id1504107222" target="_blank" class="content__buttons__item" style="color:#000000;background-color:#e0e0e0;<!--background-image:url('img/appstore.png');-->">
                         <table><tr><td>Download in AppStore</td></tr></table>
                       </a>
                     </div>
