--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Detective Max Mystery - new escape game on mobile! Jam Games production.">
     <meta name="author" content="Jam Games">
 
-    <meta property="og:url" content="ENTER_HERE_THIS_IS_BLANC">
+    <meta property="og:url" content="#">
     <meta property="og:title" content="Detective Max Mystery">
     <meta property="og:description" content="Detective Max Mystery - new escape game on mobile">
     <meta property="og:type" content="website">
