change canonical meta

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <title>Detective Max Mystery</title>
 
-    <link rel="canonical" href="ENTER_HERE_THIS_IS_BLANC">
+    <link rel="canonical" href="#">
     <link rel="shortcut icon" href="web/icon.png" type="image/x-icon">
   </head>
 
