change open graph tags

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="description" content="Detective Max Mystery - new escape game on mobile! Jam Games production.">
     <meta name="author" content="Jam Games">
 
-    <meta property="og:url" content="#">
+    <meta property="og:url" content="https://jamgames-dev.github.io/DetectiveMaxMystery/">
     <meta property="og:title" content="Detective Max Mystery">
     <meta property="og:description" content="Detective Max Mystery - new escape game on mobile">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="img/icon.png">
+    <meta property="og:image" content="https://jamgames-dev.github.io/DetectiveMaxMystery/#privacy_popup/img/icon.png">
     <meta property="fb:app_id" content="com.detective.mystery.school.murder">
 
     <title>Detective Max Mystery</title>
