change Facebook app_id

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Detective Max Mystery - new escape game on mobile">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://jamgames-dev.github.io/DetectiveMaxMystery/#privacy_popup/img/icon.png">
-    <meta property="fb:app_id" content="com.detective.mystery.school.murder">
+    <meta property="fb:app_id" content="2691884744380279">
 
     <title>Detective Max Mystery</title>
 
