--- a/index.html
+++ b/index.html
@@ -683,6 +683,14 @@
       width: 70%;
       }
     }
+    
+    @media only screen and (max-width: 1200px) {
+      .tiles_row{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      }
+    }
   </style>
 
   <div id="privacy_popup" class="overlay">
@@ -780,10 +788,10 @@
                     <div class="content__descr">Escape room + storytelling + adventure = BRAND NEW GAME GENRE</div>
                     <div class="content__buttons">
                       <a href="https://play.google.com/store/apps/details?id=com.detective.mystery.school.murder" target="_blank" class="content__buttons__item" style="color:#ffffff;background-color:#5faabe;<!--background-image:url('img/googleplay.png');-->">
-                        <table><tr><td>Download in Google.Play</td></tr></table>
+                        <table><tr><td>Download from Google.Play</td></tr></table>
                       </a>
                       <a href="https://apps.apple.com/us/app/id1504107222" target="_blank" class="content__buttons__item" style="color:#000000;background-color:#e0e0e0;<!--background-image:url('img/appstore.png');-->">
-                        <table><tr><td>Download in AppStore</td></tr></table>
+                        <table><tr><td>Download from AppStore</td></tr></table>
                       </a>
                     </div>
                   </div>
@@ -934,7 +942,7 @@
           </div>
         </div>
         <div class="contact_block">
-          <div class="contact_block__logo""></div>
+          <div class="contact_block__logo"></div>
         </div>
       </div>
     </div>
